--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
-$primary-color: #444;
-$secondary-color: #eece1a;
+$primary-color: #002;
+$secondary-color: #0a8ec2;
 $show-home-image: true;
 $home-image: url(../img/background3.jpg);
 $background-opacity: 0.75;
@@ -26,5 +26,27 @@ $background-opacity: 0.75;
         background: rgba($primary-color, $background-opacity);
       }
     }
+  }
+}
+//media query mixins
+
+@mixin mediaSm {
+  @media screen and (max-width: 500px) {
+    @content;
+  }
+}
+@mixin mediaMd {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+@mixin mediaLg {
+  @media screen and (min-width: 769px) and (max-width: 1170px) {
+    @content;
+  }
+}
+@mixin mediaXl {
+  @media screen and (min-width: 1171px) {
+    @content;
   }
 }
