--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -84,7 +84,7 @@
       height: 200px;
       background: url("../img/portrait.jpg") no-repeat;
       border-radius: 50%;
-      border: solid 3px rgb(41, 45, 75);
+      border: solid 3px $secondary-color;
     }
   }
 
