--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,35 +1,6 @@
-$primary-color: #444;
-$secondary-color: #eece1a;
-$show-home-image: true;
-$home-image: url(../img/background3.jpg);
-$background-opacity: 0.75;
-//basically functions, to call them @include
-
-@mixin easeOut {
-  transition: all 1s ease-in-out;
-}
-@mixin background {
-  @if $show-home-image {
-    &#bg-img {
-      background-image: $home-image;
-      background-attachment: fixed;
-      background-size: cover;
-
-      &:after {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        background: rgba($primary-color, $background-opacity);
-      }
-    }
-  }
-}
 @import "config";
 @import "menu";
+@import "mobile";
 * {
   box-sizing: border-box;
 }
