--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -10,7 +10,7 @@
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
-    background: #fff;
+    background: set-text-color($primary-color);
     @include easeOut;
   }
 
@@ -90,6 +90,7 @@
 
   .nav-item {
     transform: translate3d(1000%, 0, 0);
+    color: set-text-color($primary-color);
     @include easeOut;
     &.show {
       transform: translate3d(0, 0, 0);
@@ -106,7 +107,7 @@
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 300;
-    color: #fff;
+    color: set-text-color($primary-color);
     text-decoration: none;
     @include easeOut;
     &:hover {
